--- a/src/App.css
+++ b/src/App.css
@@ -58,6 +58,22 @@
   right: 1%;
   top: 1%;
 }
+.cart-count {
+  position: absolute;
+  right: 30px;
+  top: 10px;
+  z-index: 1;
+  background-color: red;
+  padding: 7px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  color: #fff;
+}
+button.remove-cart-btn {
+  background-color: blue;
+  margin-top: 5px;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
